--- a/requirements.runtime.txt
+++ b/requirements.runtime.txt
@@ -1,15 +1,17 @@
 # ─────────── NPGPT inference (CPU-only) ───────────
 # Minimal wheels required by test_ligand_generation.py
-# and Smiles-GPT checkpoint loading.  No CUDA libs.
+# and Smiles-GPT checkpoint loading.
 
-torch==2.4.0+cpu            --index-url https://download.pytorch.org/whl/cpu
+# PyTorch CPU wheel (for py3.8 – py3.12) – pulled from the CPU index.
+torch==2.4.0 --index-url https://download.pytorch.org/whl/cpu
+
 lightning==2.4.0
 pydantic==2.9.2
 transformers==4.45.2
 scikit-learn==1.5.2
-torchmetrics==1.4.2         # tiny, required by lightning
-rdkit==2024.9.6             # SMILES validation
-gdown==5.2.0                # Google-Drive downloader
+torchmetrics==1.4.2
+rdkit==2024.9.6
+gdown==5.2.0
 
-# optional telemetry (uncomment if you use it)
+# Uncomment if you log to Weights & Biases
 # wandb==0.18.3
