--- a/requirements.runtime.txt
+++ b/requirements.runtime.txt
@@ -1,10 +1,5 @@
 # ─────────── NPGPT inference (CPU-only) ───────────
-# Minimal wheels required by test_ligand_generation.py
-# and Smiles-GPT checkpoint loading.
-
-# PyTorch CPU wheel (for py3.8 – py3.12) – pulled from the CPU index.
-torch==2.4.0 --index-url https://download.pytorch.org/whl/cpu
-
+torch==2.4.0            --index-url https://download.pytorch.org/whl/cpu
 lightning==2.4.0
 pydantic==2.9.2
 transformers==4.45.2
@@ -12,6 +7,4 @@ scikit-learn==1.5.2
 torchmetrics==1.4.2
 rdkit==2024.9.6
 gdown==5.2.0
-
-# Uncomment if you log to Weights & Biases
-# wandb==0.18.3
+# wandb==0.18.3   # ← uncomment if you log to W&B
