--- a/requirements.runtime.txt
+++ b/requirements.runtime.txt
@@ -1,10 +1,12 @@
 # ─────────── NPGPT inference (CPU-only) ───────────
+# Lean wheels for Python 3.10 - 3.12
+
 torch==2.4.0            --index-url https://download.pytorch.org/whl/cpu
 lightning==2.4.0
-pydantic==2.9.2
 transformers==4.45.2
+pydantic==2.9.2
 scikit-learn==1.5.2
 torchmetrics==1.4.2
 rdkit==2024.9.6
 gdown==5.2.0
-# wandb==0.18.3   # ← uncomment if you log to W&B
+# wandb==0.18.3   # ← uncomment if you use W&B
